# TDLP

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  train_with_pretrained_encoders.sh
.github/workflows/: pylint.yml  pytest.yml
configs/: appearance.yaml  basic.yaml  bbox.yaml  bbox_only.yaml  default.yaml  keypoints.yaml
configs/dataset/: bee24_bbox.yaml  dancetrack.yaml  dancetrack_appearance.yaml  dancetrack_basic.yaml  dancetrack_bbox.yaml  dancetrack_keypoints.yaml  default.yaml  mot17.yaml  mot17_appearance.yaml  mot17_bbox.yaml  mot17_keypoints.yaml  soccernet.yaml  soccernet_bbox.yaml  sportsmot.yaml  sportsmot_appearance.yaml  sportsmot_bbox.yaml  sportsmot_keypoints.yaml
configs/eval/: default.yaml
configs/hf/: default.yaml
configs/model/: default.yaml
configs/model_config/: basic.yaml  default.yaml  mm_appearance.yaml  mm_bboxes.yaml  mm_bboxes_keypoints.yaml  mm_bboxes_keypoints_appearance.yaml  mm_keypoints.yaml  mm_tdsp_appearance.yaml  mm_tdsp_bboxes.yaml  mm_tdsp_bboxes_keypoints_appearance.yaml  mm_tdsp_keypoints.yaml  with_interaction_encoder.yaml
configs/path/: default.yaml
configs/resources/: default.yaml
configs/train/: base.yaml  batch.yaml  bce.yaml  clip.yaml  default.yaml  id.yaml  mm.yaml
docker/: Dockerfile  docker-compose.yaml  tensorboard.Dockerfile
history/BEE24/: tdlp_bboxes.yaml
history/DanceTrack/: exp107a-fromExp105-ScaleUp.yaml  tdlp.yaml  (+3 more)
tests/: test_losses.py
tools/: association_analysis.py  clustering.py  demo.py  error_analysis.py  inference.py  train.py  utils.py
(+172 files in other folders)
