[project]
name = "mot-jepa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dacite>=1.9.2",
    "einops>=0.8.1",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.3",
    "motrack>=0.4.1",
    "numpy>=2.3.1",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytorch-metric-learning>=2.8.1",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "scipy>=1.16.0",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchmetrics==0.11.4",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]
